--- a/HZSHOP/HZSHOP/Cart/View/HZCartTableViewCell.xib
+++ b/HZSHOP/HZSHOP/Cart/View/HZCartTableViewCell.xib
@@ -13,14 +13,14 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="127" id="KGk-i7-Jjw" customClass="HZCartTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="303" height="127"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="127"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="303" height="126.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="126.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="T08-ma-LCD">
-                        <rect key="frame" x="0.0" y="0.0" width="303" height="125.5"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="125.5"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4B6-eK-3tu">
                                 <rect key="frame" x="15" y="55.5" width="15" height="15"/>
@@ -40,7 +40,7 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="一号商品" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ceR-m9-Egs">
-                                <rect key="frame" x="136.5" y="25" width="158.5" height="21"/>
+                                <rect key="frame" x="136.5" y="25" width="175.5" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="Aeg-SB-hBx"/>
                                 </constraints>
@@ -48,17 +48,44 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Y110.0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eXH-Jj-XCn">
-                                <rect key="frame" x="136.5" y="80" width="55.5" height="22"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" text="1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eXH-Jj-XCn">
+                                <rect key="frame" x="136.5" y="80" width="12" height="22"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="22" id="U7k-T2-kKO"/>
+                                    <constraint firstAttribute="width" priority="750" constant="12" id="GtR-ke-6hc"/>
+                                    <constraint firstAttribute="height" constant="22" id="hCg-h2-Ucy"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <color key="textColor" red="0.94509803920000002" green="0.38823529410000002" blue="0.15686274510000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QPd-VH-eRJ">
+                                <rect key="frame" x="150.5" y="80" width="12" height="22"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="22" id="G9T-eC-TuK"/>
+                                    <constraint firstAttribute="width" priority="750" constant="12" id="bXJ-0k-Mf4"/>
+                                </constraints>
+                                <attributedString key="attributedText">
+                                    <fragment content="1">
+                                        <attributes>
+                                            <color key="NSColor" red="0.74509803921568629" green="0.74509803921568629" blue="0.74509803921568629" alpha="1" colorSpace="calibratedRGB"/>
+                                            <font key="NSFont" size="15" name=".SFNSText"/>
+                                            <integer key="NSStrikethrough" value="1"/>
+                                        </attributes>
+                                    </fragment>
+                                </attributedString>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="46b-qc-J7U">
+                                <rect key="frame" x="136.5" y="50" width="175.5" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="JWm-Qs-Id8"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <color key="textColor" red="0.94509803920000002" green="0.38823529410000002" blue="0.15686274510000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <button opaque="NO" tag="10" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ydp-WH-z86">
-                                <rect key="frame" x="207" y="77" width="25" height="25"/>
+                                <rect key="frame" x="224" y="77" width="25" height="25"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="25" id="nRF-TU-TDf"/>
                                     <constraint firstAttribute="height" constant="25" id="pW9-lK-uQa"/>
@@ -71,7 +98,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" tag="11" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qRs-ip-d9O">
-                                <rect key="frame" x="270" y="77" width="25" height="25"/>
+                                <rect key="frame" x="287" y="77" width="25" height="25"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="25" id="eb0-0T-wxp"/>
                                     <constraint firstAttribute="height" constant="25" id="rVy-Dh-p5w"/>
@@ -84,7 +111,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rg5-71-yWx">
-                                <rect key="frame" x="232" y="77" width="38" height="25"/>
+                                <rect key="frame" x="249" y="77" width="38" height="25"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="25" id="OhY-hv-ZWi"/>
                                     <constraint firstAttribute="width" constant="38" id="qC5-Np-qJI"/>
@@ -94,7 +121,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" clipsSubviews="YES" tag="50001" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" text="1" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GxC-tm-W1i">
-                                <rect key="frame" x="232" y="77" width="38" height="25"/>
+                                <rect key="frame" x="249" y="77" width="38" height="25"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="25" id="juM-9F-t2k"/>
                                     <constraint firstAttribute="width" constant="38" id="qD5-aG-dDL"/>
@@ -103,43 +130,35 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="46b-qc-J7U">
-                                <rect key="frame" x="136.5" y="50" width="158.5" height="21"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="JWm-Qs-Id8"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                <color key="textColor" red="0.94509803920000002" green="0.38823529410000002" blue="0.15686274510000001" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <constraints>
                             <constraint firstItem="4B6-eK-3tu" firstAttribute="centerY" secondItem="T08-ma-LCD" secondAttribute="centerY" id="2IP-A4-hsf"/>
                             <constraint firstItem="46b-qc-J7U" firstAttribute="top" secondItem="ceR-m9-Egs" secondAttribute="bottom" constant="4" id="2i0-eS-Gvx"/>
+                            <constraint firstAttribute="bottom" secondItem="QPd-VH-eRJ" secondAttribute="bottom" constant="23.5" id="4VA-qW-7FP"/>
                             <constraint firstItem="Rg5-71-yWx" firstAttribute="leading" secondItem="ydp-WH-z86" secondAttribute="trailing" id="5LA-ED-kvn"/>
                             <constraint firstAttribute="bottom" secondItem="qRs-ip-d9O" secondAttribute="bottom" constant="23.5" id="9m9-dQ-aXr"/>
                             <constraint firstAttribute="bottom" secondItem="Rg5-71-yWx" secondAttribute="bottom" constant="23.5" id="AhU-p6-bZG"/>
-                            <constraint firstItem="eXH-Jj-XCn" firstAttribute="leading" secondItem="tif-zs-TNb" secondAttribute="trailing" constant="15" id="ChD-Wy-mkM"/>
                             <constraint firstItem="qRs-ip-d9O" firstAttribute="leading" secondItem="Rg5-71-yWx" secondAttribute="trailing" id="DPj-B6-x4H"/>
                             <constraint firstAttribute="trailing" secondItem="ceR-m9-Egs" secondAttribute="trailing" constant="8" id="Feu-kU-7tH"/>
                             <constraint firstAttribute="trailing" secondItem="46b-qc-J7U" secondAttribute="trailing" constant="8" id="MJC-Xl-kAC"/>
                             <constraint firstItem="qRs-ip-d9O" firstAttribute="leading" secondItem="GxC-tm-W1i" secondAttribute="trailing" id="PlC-ka-L2c"/>
                             <constraint firstAttribute="bottom" secondItem="ydp-WH-z86" secondAttribute="bottom" constant="23.5" id="SDC-bo-gJ9"/>
-                            <constraint firstAttribute="bottom" secondItem="eXH-Jj-XCn" secondAttribute="bottom" constant="23.5" id="Sjs-HQ-Kgu"/>
                             <constraint firstItem="4B6-eK-3tu" firstAttribute="leading" secondItem="T08-ma-LCD" secondAttribute="leading" constant="15" id="Ugn-al-sGg"/>
                             <constraint firstItem="tif-zs-TNb" firstAttribute="top" secondItem="T08-ma-LCD" secondAttribute="top" constant="23" id="Uxu-PR-uy7"/>
                             <constraint firstItem="tif-zs-TNb" firstAttribute="leading" secondItem="4B6-eK-3tu" secondAttribute="trailing" constant="12" id="WG5-pf-ESZ"/>
                             <constraint firstItem="46b-qc-J7U" firstAttribute="leading" secondItem="tif-zs-TNb" secondAttribute="trailing" constant="15" id="WPf-mt-8We"/>
                             <constraint firstItem="ceR-m9-Egs" firstAttribute="leading" secondItem="tif-zs-TNb" secondAttribute="trailing" constant="15" id="aIk-Xv-TG8"/>
+                            <constraint firstItem="QPd-VH-eRJ" firstAttribute="leading" secondItem="eXH-Jj-XCn" secondAttribute="trailing" constant="2" id="cnh-xL-6YO"/>
+                            <constraint firstAttribute="bottom" secondItem="eXH-Jj-XCn" secondAttribute="bottom" constant="23.5" id="eyu-O9-TOh"/>
                             <constraint firstAttribute="bottom" secondItem="tif-zs-TNb" secondAttribute="bottom" constant="23" id="fVB-Yq-ALL"/>
                             <constraint firstAttribute="bottom" secondItem="GxC-tm-W1i" secondAttribute="bottom" constant="23.5" id="liL-Vm-mTn"/>
-                            <constraint firstItem="ydp-WH-z86" firstAttribute="leading" secondItem="eXH-Jj-XCn" secondAttribute="trailing" constant="15" id="owV-pg-dLD"/>
                             <constraint firstAttribute="trailing" secondItem="qRs-ip-d9O" secondAttribute="trailing" constant="8" id="s97-Kd-Sek"/>
+                            <constraint firstItem="eXH-Jj-XCn" firstAttribute="leading" secondItem="tif-zs-TNb" secondAttribute="trailing" constant="15" id="uuA-3e-0Ol"/>
                             <constraint firstItem="ceR-m9-Egs" firstAttribute="top" secondItem="T08-ma-LCD" secondAttribute="top" constant="25" id="vAn-nU-hj2"/>
                         </constraints>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r1g-cj-aap">
-                        <rect key="frame" x="0.0" y="125.5" width="303" height="1"/>
+                        <rect key="frame" x="0.0" y="125.5" width="320" height="1"/>
                         <color key="backgroundColor" red="0.95294117647058818" green="0.95294117647058818" blue="0.95294117647058818" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="1" id="WoC-tL-Y3v"/>
@@ -161,14 +180,16 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
             <connections>
+                <outlet property="goodsOldPrice" destination="QPd-VH-eRJ" id="Ls1-K8-z4L"/>
                 <outlet property="goodsPrice" destination="eXH-Jj-XCn" id="f4v-Kb-TpC"/>
+                <outlet property="goodsSpecs" destination="46b-qc-J7U" id="7Jo-hZ-SS3"/>
                 <outlet property="goodsTitle" destination="ceR-m9-Egs" id="msn-us-t0F"/>
                 <outlet property="imageIcon" destination="tif-zs-TNb" id="zJe-hE-2tg"/>
                 <outlet property="numLabel" destination="Rg5-71-yWx" id="XhU-gR-iOO"/>
                 <outlet property="numTextField" destination="GxC-tm-W1i" id="zSJ-pk-wmd"/>
                 <outlet property="selectButton" destination="4B6-eK-3tu" id="dTN-87-BEb"/>
             </connections>
-            <point key="canvasLocation" x="16.800000000000001" y="105.69715142428787"/>
+            <point key="canvasLocation" x="-225.59999999999999" y="89.505247376311857"/>
         </tableViewCell>
     </objects>
     <resources>
