--- a/HZSHOP/HZSHOP/Cart/Controller/HZCartOrderViewController.xib
+++ b/HZSHOP/HZSHOP/Cart/Controller/HZCartOrderViewController.xib
@@ -34,6 +34,9 @@
                             <state key="normal" title="立即支付">
                                 <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </state>
+                            <connections>
+                                <action selector="submitOrder:" destination="-1" eventType="touchUpInside" id="2dN-Mq-IUB"/>
+                            </connections>
                         </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="1000" text="Y" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ytD-2z-L45">
                             <rect key="frame" x="195" y="0.0" width="22" height="35"/>
