--- a/HZSHOP/HZSHOP/Mine/View/HZMyFollowTableViewCell.xib
+++ b/HZSHOP/HZSHOP/Mine/View/HZMyFollowTableViewCell.xib
@@ -28,10 +28,11 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Y100.0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4zM-WV-L0b">
-                        <rect key="frame" x="121" y="85" width="168" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="1000" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4zM-WV-L0b">
+                        <rect key="frame" x="121" y="85" width="10" height="21"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="21" id="8ag-Bu-dfl"/>
+                            <constraint firstAttribute="height" constant="21" id="diu-Hp-zZZ"/>
+                            <constraint firstAttribute="width" priority="750" constant="10" id="yuZ-5l-Oq3"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" red="0.9882352941176471" green="0.3411764705882353" blue="0.3529411764705882" alpha="1" colorSpace="calibratedRGB"/>
@@ -53,17 +54,28 @@
                             <constraint firstAttribute="width" secondItem="OAI-ey-Het" secondAttribute="height" multiplier="1:1" id="Jd1-v1-Ivm"/>
                         </constraints>
                     </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Y100.0" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NPP-oS-jbd">
+                        <rect key="frame" x="136" y="85.5" width="148" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="xtP-Yt-TS6"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" name=".SFNSText" family=".SF NS Text" pointSize="14"/>
+                        <color key="textColor" red="0.74509803919999995" green="0.74509803919999995" blue="0.74509803919999995" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="4zM-WV-L0b" firstAttribute="leading" secondItem="OAI-ey-Het" secondAttribute="trailing" constant="17" id="68K-Xd-YpI"/>
                     <constraint firstItem="E2t-MI-uXr" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="7" id="DcF-Xc-bh8"/>
                     <constraint firstItem="OAI-ey-Het" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="Kj4-ei-HhZ"/>
-                    <constraint firstItem="4zM-WV-L0b" firstAttribute="leading" secondItem="OAI-ey-Het" secondAttribute="trailing" constant="17" id="S7p-AU-SH5"/>
                     <constraint firstAttribute="trailing" secondItem="1Xd-Jm-f45" secondAttribute="trailing" id="UTx-AO-lsm"/>
                     <constraint firstItem="1Xd-Jm-f45" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="XMy-Zg-JG3"/>
                     <constraint firstAttribute="bottom" secondItem="1Xd-Jm-f45" secondAttribute="bottom" id="YLZ-3f-Gu4"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="NPP-oS-jbd" secondAttribute="trailing" constant="20" id="bcz-IT-DWo"/>
+                    <constraint firstItem="1Xd-Jm-f45" firstAttribute="top" secondItem="4zM-WV-L0b" secondAttribute="bottom" constant="16.5" id="cMm-wY-QTk"/>
                     <constraint firstAttribute="trailingMargin" secondItem="E2t-MI-uXr" secondAttribute="trailing" constant="15" id="fLr-eb-wab"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="4zM-WV-L0b" secondAttribute="bottom" constant="7" id="ge7-Ny-HuY"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="4zM-WV-L0b" secondAttribute="trailing" constant="15" id="mDm-Ge-V05"/>
+                    <constraint firstItem="1Xd-Jm-f45" firstAttribute="top" secondItem="NPP-oS-jbd" secondAttribute="bottom" constant="16" id="fcy-m4-ro4"/>
+                    <constraint firstItem="NPP-oS-jbd" firstAttribute="leading" secondItem="4zM-WV-L0b" secondAttribute="trailing" constant="5" id="hkH-ng-eDS"/>
                     <constraint firstItem="E2t-MI-uXr" firstAttribute="leading" secondItem="OAI-ey-Het" secondAttribute="trailing" constant="17" id="mTF-oW-wRD"/>
                     <constraint firstItem="OAI-ey-Het" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="7" id="qE5-Oz-Eml"/>
                     <constraint firstAttribute="bottomMargin" secondItem="OAI-ey-Het" secondAttribute="bottom" constant="7" id="sYI-Hz-73v"/>
@@ -71,6 +83,7 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
             <connections>
+                <outlet property="goodsOldPrice" destination="NPP-oS-jbd" id="rAV-PN-Ewg"/>
                 <outlet property="goodsPrice" destination="4zM-WV-L0b" id="sXh-0N-jSj"/>
                 <outlet property="goodsTitle" destination="E2t-MI-uXr" id="n2y-J4-zQF"/>
                 <outlet property="iamgeIcon" destination="OAI-ey-Het" id="nW6-bk-E83"/>
